objects/Step_Forward_Activity__c.object
<CustomObject>
    <fields>
        <fullName>A_Level_B__c</fullName>
        <label>A Level B</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_Level_C__c</fullName>
        <label>A Level C</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_Level_D__c</fullName>
        <label>A Level D</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_Level_E__c</fullName>
        <label>A Level E</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_Level_N__c</fullName>
        <label>A Level N</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_Level_U__c</fullName>
        <label>A Level U</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_Level_status__c</fullName>
        <label>A Level: status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Predicted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accounting_Experience_Detail__c</fullName>
        <label>Accounting Experience Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accounting_Experience__c</fullName>
        <label>Accounting Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attention to detail</fullName>
                </value>
                <value>
                    <fullName>Bookkeeping</fullName>
                </value>
                <value>
                    <fullName>Basic finance / accounting</fullName>
                </value>
                <value>
                    <fullName>Cash handling</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Budgets</fullName>
                </value>
                <value>
                    <fullName>Cash flow accounts</fullName>
                </value>
                <value>
                    <fullName>Costings</fullName>
                </value>
                <value>
                    <fullName>Report writing</fullName>
                </value>
                <value>
                    <fullName>Microsoft word</fullName>
                </value>
                <value>
                    <fullName>Microsoft excel</fullName>
                </value>
                <value>
                    <fullName>Microsoft power point</fullName>
                </value>
                <value>
                    <fullName>Microsoft outlook</fullName>
                </value>
                <value>
                    <fullName>Microsoft windows</fullName>
                </value>
                <value>
                    <fullName>Microsoft desk top</fullName>
                </value>
                <value>
                    <fullName>Internet explorer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accounting_Feedback__c</fullName>
        <formula>if(and(Accounting_Score__c&gt;0,Accounting_Score__c&lt;=10),

&quot;The session aimed to assess key skills required for a role in Accounting which everyone was assessed in, including numeracy and writing skills, and ability to organise and prioritise. You scored well in some of the exercises, however, others scored higher in more areas.&quot;,

if(and(Accounting_Score__c&gt;10,Accounting_Score__c&lt;=14),

&quot;The session aimed to assess key skills required for a role in Accounting which everyone was assessed in, including numeracy and writing skills, and ability to organise and prioritise. You scored very well in the majority of the exercises, however, others scored higher in more areas.&quot;,

if(and(Accounting_Score__c&gt;14,Accounting_Score__c&lt;=20),

&quot;The session aimed to assess key skills required for a role in Accounting which everyone was assessed in, including numeracy and writing skills, and ability to organise and prioritise. You did extremely well in this session, scoring highly in each exercise.&quot;,&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accounting Feedback</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Final_Score__c</fullName>
        <formula>if(Interview_Score__c&gt;0,((Accounting_Score__c/50)*100/3)+((STEP_Score__c/20)*100/3)+((Interview_Score__c/20)*100/3),((Accounting_Score__c/50)*100/3)+((STEP_Score__c/20)*100/3))</formula>
        <label>Accounting Final Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accounting_Pathway_Reason_for_Interest__c</fullName>
        <label>Accounting Pathway - Reason for Interest</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accounting_Score__c</fullName>
        <label>Accounting Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Support_Notes__c</fullName>
        <label>Additional Support Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is ticked, the YP requires additional support</inlineHelpText>
        <label>Additional Support?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Post_Code__c</fullName>
        <label>Address Post Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_of_YP_Programme_Dependant__c</fullName>
        <formula>(date(value(Cohort_Year__c),09,01)- Date_of_birth_StepFwd_check__c) /365.2425</formula>
        <label>Age of YP: Programme Dependant</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_when_Programme_Starts__c</fullName>
        <formula>(date(value(Cohort_Year__c),09,01) - DOB_check__c )/365.2425</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age when Programme Starts</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Any_Other_Qualifications_and_Subjects__c</fullName>
        <label>Any Other Qualifications and Subjects</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_from_web_Date__c</fullName>
        <inlineHelpText>A check confirming application came from the Step Forward Website</inlineHelpText>
        <label>Application from web (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Group__c</fullName>
        <label>Assessment: Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_Selection__c</fullName>
        <label>Assessment: Selection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_attendance_result__c</fullName>
        <inlineHelpText>Use this field to record the actual attendance once assessments have srtarted</inlineHelpText>
        <label>Assessment attendance result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Did not attend</fullName>
                </value>
                <value>
                    <fullName>Invite to interview</fullName>
                </value>
                <value>
                    <fullName>Did not pass first stage</fullName>
                </value>
                <value>
                    <fullName>Attended - successful</fullName>
                </value>
                <value>
                    <fullName>Attended - unsuccessful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_date_details__c</fullName>
        <formula>CASE(MOD( Step_Forward_Assessment_Date__c - DATE(1900, 1, 6), 7), 0, &quot;Saturday&quot;, 1, &quot;Sunday&quot;, 2,&quot;Monday&quot;, 3, &quot;Tuesday&quot;, 4, &quot;Wednesday&quot;, 5, &quot;Thursday&quot;, 6,&quot;Friday&quot;,&quot;&quot;)

+&quot; &quot; +TEXT(DAY(Step_Forward_Assessment_Date__c ))+&quot; &quot; +
if(TEXT(MONTH(Step_Forward_Assessment_Date__c ))=&quot;1&quot;,&quot;January&quot;,
if(TEXT(MONTH(Step_Forward_Assessment_Date__c ))=&quot;2&quot;,&quot;February&quot;,
if(TEXT(MONTH(Step_Forward_Assessment_Date__c ))=&quot;3&quot;,&quot;March&quot;,
if(TEXT(MONTH(Step_Forward_Assessment_Date__c ))=&quot;4&quot;,&quot;April&quot;,
if(TEXT(MONTH(Step_Forward_Assessment_Date__c ))=&quot;5&quot;,&quot;May&quot;,
if(TEXT(MONTH(Step_Forward_Assessment_Date__c ))=&quot;6&quot;,&quot;June&quot;,
if(TEXT(MONTH(Step_Forward_Assessment_Date__c ))=&quot;7&quot;,&quot;July&quot;,
if(TEXT(MONTH(Step_Forward_Assessment_Date__c ))=&quot;8&quot;,&quot;August&quot;,
if(TEXT(MONTH(Step_Forward_Assessment_Date__c ))=&quot;9&quot;,&quot;September&quot;,
if(TEXT(MONTH(Step_Forward_Assessment_Date__c ))=&quot;10&quot;,&quot;October&quot;,
if(TEXT(MONTH(Step_Forward_Assessment_Date__c ))=&quot;11&quot;,&quot;November&quot;,
if(TEXT(MONTH(Step_Forward_Assessment_Date__c ))=&quot;12&quot;,&quot;December&quot;,&quot;&quot;))))))))))))

+&quot; &quot; +TEXT(YEAR(Step_Forward_Assessment_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment date details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_group_assignment__c</fullName>
        <formula>&quot;Date: &quot;&amp; (Assessment_date_details__c) &amp;br()&amp;

if( text(Assessment_Group__c) =&quot;A&quot;,
&quot;Time: 9:30am - 12:30pm&quot; &amp;br()&amp;
&quot;Please arrive: 09:15am&quot;,

if( text(Assessment_Group__c) =&quot;B&quot;,
&quot;Time: 1:30pm - 4:30pm&quot; &amp;br()&amp;
&quot;Please arrive: 1:15pm&quot;,

if( text(Assessment_Group__c) =&quot;C&quot;,
&quot;Time: 9:30am - 12:30pm&quot; &amp;br()&amp;
&quot;Please arrive: 09:15am&quot;,

if( text(Assessment_Group__c) =&quot;D&quot;,
&quot;Time: 1:30pm - 4:30pm&quot; &amp;br()&amp;
&quot;Please arrive: 1:15pm&quot;,

if( text(Assessment_Group__c) =&quot;E&quot;,
&quot;Time: 9:15am - 11:15am&quot; &amp;br()&amp;
&quot;Please arrive: 9:00am&quot;,

if( text(Assessment_Group__c) =&quot;F&quot;,
&quot;Time: 11:45am - 1:45pm&quot; &amp;br()&amp;
&quot;Please arrive: 11:30am&quot;,

if( text(Assessment_Group__c) =&quot;G&quot;,
&quot;Time: 2:45pm - 4:45pm&quot; &amp;br()&amp;
&quot;Please arrive: 2:30pm&quot;,&quot;&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment group assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_StepFwd_Mobile__c</fullName>
        <label>Associate StepFwd Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Associate_StepFwd_email__c</fullName>
        <label>Associate StepFwd email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Associate__c</fullName>
        <description>YP Contact</description>
        <label>Associate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Step Forward Activities</relationshipLabel>
        <relationshipName>Step_Forward_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Associate_call_date__c</fullName>
        <label>Associate call date</label>
        <type>Date</type>
    </fields>
</CustomObject>